--- a/locustempus/main.css
+++ b/locustempus/main.css
@@ -41,7 +41,6 @@ header.landingpage {
   -moz-transition: all 0.4s ease-in-out;
   height: 6.5rem;
   z-index: 999;
-    /* background-color: #343a40!important; */
 }
 
 .header-shadow {
@@ -52,7 +51,7 @@ header.landingpage {
   top: 0;
   left; 0;
     background-color: #343a40;
-    opacity: 0.4;
+    opacity: 0.5;
 }
 
 .navbar-brand img {
@@ -71,88 +70,73 @@ header.landingpage.shrink .navbar-brand img {
     height: 2.5rem;
 }
 
-
-/* 
-#landingnav {
-    height: 6rem;
-  transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  opacity: 0.8;
-}
-
-.shrink#landingnav {
-    height: 4.125rem;
-  opacity: 1;
-}
- */
-
 section {
     padding: 4rem 0;
 }
 
 /* --- Section: Hero --- */
 .feature-hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("lt-hero.png");
-  height: 42rem;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  padding: 0;
-  z-index: 990;
+    background-image: linear-gradient(rgba(65, 81, 108, 0.2), rgba(65, 81, 108, 0.2)), url("lt-hero2.png");
+    height: 42rem;
+    padding: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    color: #333;
 }
-
-.feature-hero-shadow {
-  transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  height: 6.5rem;
-    width: 100%;
-  position: absolute;
-  top: 0;
-  left; 0;
-    background-color: #343a40;
-    opacity: 0.7;
-}
-
-/* 
-.feature-hero-shadow.shrink {
-    height: 4.125rem;
-    width: 100%;
-  position: fixed;
-  top: 0;
-  left; 0;
-    background-color: #343a40;
-    opacity: 1;
-}
- */
 
 .hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
+        top: 55%;
+        left: 40%;
+        transform: translate(-33%, -55%);
+    text-align: center;
+    position: absolute;
 }
 
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
+.hero-text h1 {
+    font-weight: 600;
+    font-size: 3.25rem;
 }
 
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
+.hero-text p {
+    font-weight: 400;
+    font-size: 1.5rem;
 }
 
 .image-placeholder {
     height: 20rem;
 }
+
+/* 
+Extra small devices (portrait phones, less than 576px)
+No media query for `xs` since this is the default in Bootstrap
+ */
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+    .hero-text {
+        top: 55%;
+        left: 40%;
+        transform: translate(-33%, -55%);
+    }
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+    .hero-text {
+        width: 50rem;
+        top: 55%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+    }
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+
