--- a/locustempus/main.css
+++ b/locustempus/main.css
@@ -39,35 +39,34 @@ header.landingpage {
   transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
-  height: 6.5rem;
+  height: auto;
   z-index: 999;
 }
 
 .header-shadow {
-  height: 6.5rem;
     width: 100%;
     height: 100%;
   position: absolute;
   top: 0;
-  left; 0;
+  left: 0;
     background-color: #343a40;
     opacity: 0.5;
 }
 
 .navbar-brand img {
-    height: 4.75rem;
+    height: 3rem;
   transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
 }
 
 header.landingpage.shrink {
-    height: 4.125rem;
+    height: auto;
     background-color: #343a40;
 }
 
 header.landingpage.shrink .navbar-brand img {
-    height: 2.5rem;
+    height: 1.8rem;
 }
 
 section {
@@ -96,7 +95,6 @@ section {
 
 .hero-text h1 {
     font-weight: 600;
-    font-size: 3.25rem;
 }
 
 .hero-text p {
@@ -115,14 +113,46 @@ No media query for `xs` since this is the default in Bootstrap
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+    header.landingpage {
+        height: 6.5rem;
+    }
+    .navbar-brand img {
+        height: 4.75rem;
+    }
+    header.landingpage.shrink {
+        height: 4.125rem;
+    }
+    header.landingpage.shrink .navbar-brand img {
+        height: 2.5rem;
+    }
+    .feature-hero {
+        height: 35rem;
+    }
+    .hero-text {
+        width: 30rem;
+        top: 60%;
+        left: 50%;
+        transform: translate(-50%, -55%);
+    }
 }
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
+    .feature-hero {
+        height: 42rem;
+    }
     .hero-text {
+        width: auto;
         top: 55%;
         left: 40%;
         transform: translate(-33%, -55%);
+    }
+    .hero-text h1 {
+        font-size: 3.25rem;
+    }
+    .hero-text p {
+        font-weight: 400;
+        font-size: 1.5rem;
     }
 }
 
