--- a/locustempus/main.css
+++ b/locustempus/main.css
@@ -3,11 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600&display=swap');
 
+/* --- ✓ --- */
 html, body {
     position: relative;
     height: 100%;
     width: 100%;
     margin: 0;
+    background-color: #fff;
 }
 
 body, html  {
@@ -16,6 +18,7 @@ body, html  {
     margin: 0;
 }
 
+/* --- ✓ --- */
 .skippy {
     display: block;
     padding: 0.75em;
@@ -25,15 +28,18 @@ body, html  {
     outline: 0;
 }
 
+/* --- ✓ --- */
 .skippy:hover {
     color: #fff;
 }
 
+/* --- ✓ --- */
 .skippy-text {
   padding: .5em;
   outline: 1px dotted;
 }
 
+/* --- ✓ --- */
 header.landingpage {
     background: transparent;
   transition: all 0.4s ease-in-out;
@@ -43,16 +49,18 @@ header.landingpage {
   z-index: 999;
 }
 
+/* --- ✓ --- */
 .header-shadow {
     width: 100%;
     height: 100%;
   position: absolute;
   top: 0;
   left: 0;
-    background-color: #343a40;
-    opacity: 0.5;
+    background-color: #2196F3;
+    opacity: 0.6;
 }
 
+/* --- ✓ --- */
 .navbar-brand img {
     height: 3rem;
   transition: all 0.4s ease-in-out;
@@ -60,11 +68,13 @@ header.landingpage {
   -moz-transition: all 0.4s ease-in-out;
 }
 
+/* --- ✓ --- */
 header.landingpage.shrink {
     height: auto;
-    background-color: #343a40;
+    background-color: #2196F3;
 }
 
+/* --- ✓ --- */
 header.landingpage.shrink .navbar-brand img {
     height: 1.8rem;
 }
@@ -106,6 +116,85 @@ header.landingpage.shrink .navbar-brand img {
 .image-placeholder {
     height: 20rem;
     border: 1px solid #ddd;
+}
+
+/* color */
+
+.palette-set {
+    margin-bottom: 0.5rem;
+}
+
+.palette {
+    width: 10rem;
+    height: 10rem;
+}
+
+#blue1 {
+    background-color: #6bade5;
+}
+
+#blue2 {
+    background-color: #0073d0;
+}
+
+#blue4 {
+    background-color: #82cfef;
+}
+
+#blue5 {
+    background-color: #b3d9fb;
+}
+
+#blue6 {
+    background-color: #90CAF9;
+}
+
+#orange1 {
+    background-color: #f8a360;
+}
+
+#orange2 {
+    background-color: #f2a271;
+}
+
+#orange3 {
+    background-color: #f8a360;
+}
+
+#yellow1 {
+    background-color: #edd367;
+}
+
+#yellow2 {
+    background-color: #fcebaa;
+}
+
+#yellow3 {
+    background-color: #ffe082;
+}
+
+#green1 {
+    background-color: #ade390;
+}
+
+#green2 {
+    background-color: #cde6c9;
+}
+
+#green3 {
+    background-color: #c8e6c9;
+}
+
+#grey1 {
+    background-color: #e0e0e0;
+}
+
+#grey2 {
+    background-color: #e8e8e8;
+}
+
+#grey3 {
+    background-color: #e0e0e0;
 }
 
 /* 
