--- a/ll-bootstrap/top-bar.css
+++ b/ll-bootstrap/top-bar.css
@@ -21,8 +21,10 @@
 }
 
 .top-bar__nav {
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+    /*margin-top: 0.5rem;
+    margin-bottom: 0.5rem;*/
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: auto;
     font-size: 0.85rem;
     justify-content: center;
