--- a/ll-bootstrap/top-bar.css
+++ b/ll-bootstrap/top-bar.css
@@ -37,6 +37,14 @@
 }
 .top-bar__nav .nav-link {
     color: #fff; /* text-white */
+    padding: 0.5rem;
+    line-height: 1.2;
+}
+@media (min-width: 768px) {
+    .top-bar__nav .nav-link {
+        padding: 0.5rem 1rem;
+        line-height: 1.5;
+    }
 }
 .top-bar__nav img {
     width: 1.25rem;
@@ -53,11 +61,25 @@
     padding-top: 0;
     padding-bottom: 0;
     margin: 0 auto 0 0;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     text-decoration: none;
     white-space: nowrap;
     color: #fff; /* text-white */
     text-decoration: none;
+}
+.navbar-brand img {
+    width: 2rem;
+    height: 2rem;
+}
+
+@media (min-width: 768px) {
+    .navbar-brand {
+        font-size: 1.5rem;
+    }
+    .navbar-brand img {
+        width: 2.875rem;
+        height: 2.875rem;
+    }
 }
 
 
