--- a/ll-bootstrap/top-bar.css
+++ b/ll-bootstrap/top-bar.css
@@ -1,6 +1,6 @@
 .top-bar {
     background-color: #212529; /* $gray-900 */
-    padding: 0.5rem 0.5rem; /* py-2 px-2 */
+    padding: 0.25rem 0.5rem; /* py-2 px-2 */
     color: #fff; /* text-white */
 }
 @media (min-width: 768px) {
@@ -37,7 +37,7 @@
 }
 .top-bar__nav .nav-link {
     color: #fff; /* text-white */
-    padding: 0.5rem;
+    padding: 0.25rem 0.5rem;
     line-height: 1.2;
 }
 @media (min-width: 768px) {
@@ -47,8 +47,8 @@
     }
 }
 .top-bar__nav img {
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 1.125rem;
+    height: 1.125rem;
 }
 @media (min-width: 768px) {
     .top-bar__nav img {
