--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -53,6 +53,7 @@
     .cardset-card__number {
         width: 4rem;
         font-size: 3rem;
+        line-height: 1;
         margin-right: 1rem;
     }
 }
@@ -62,10 +63,12 @@
     font-size: 1.25rem;
     align-self: center !important;
     margin-right: 1rem;
+    line-height: 1.3;
 }
 @media (min-width: 768px) {
     .cardset-card__title {
         font-size: 1.75rem;
+        line-height: 1.5;
     }
 }
 
