--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -35,6 +35,36 @@
     margin-bottom: 1.5rem;
 }
 
+
+.cardset-card__avatar {
+    display: block;
+    width: 4rem;
+    height: 4rem;
+    margin-right: 0.5rem;
+    padding: 0.5625rem;
+    flex-grow: 0;
+    flex-shrink: 0;
+    overflow: hidden;
+    border-radius: 50%;
+    border: 1px solid #999;
+    background-color: #eeeeee;
+}
+@media (min-width: 768px) {
+    .cardset-card__avatar {
+        width: 5rem;
+        height: 5rem;
+        margin-right: 1rem;
+    }
+}
+@media (min-width: 992px) {
+    .cardset-card__avatar {
+        width: 7rem;
+        height: 7rem;
+        margin-right: 1rem;
+    }
+}
+
+
 .cardset-card__number {
     display: block;
     width: 2.25rem;
@@ -85,6 +115,31 @@
 .cardset-card__status {
         width: 3rem;
         height: 3rem;
+    }
+}
+
+
+.cardset-levels {
+    width: 100%;
+}
+@media (min-width: 768px) {
+.cardset-levels {
+    width: 29rem;
+    }
+}
+@media (min-width: 992px) {
+.cardset-levels {
+    width: 39rem;
+    }
+}
+@media (min-width: 1200px) {
+.cardset-levels {
+    width: 46.5rem;
+    }
+}
+@media (min-width: 1400px) {
+.cardset-levels {
+    width: 54rem;
     }
 }
 
