--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -91,13 +91,27 @@
 
 .cardset-card__title {
     font-size: 1.25rem;
-    align-self: center !important;
+    /*align-self: center !important;*/
     margin-right: 1rem;
     line-height: 1.3;
 }
 @media (min-width: 768px) {
     .cardset-card__title {
         font-size: 1.75rem;
+        line-height: 1.5;
+    }
+}
+
+.
+cardset-card__text {
+    font-size: 1rem;
+    /* align-self: center !important;*/
+    margin-right: 1rem;
+    line-height: 1.3;
+}
+@media (min-width: 768px) {
+    .cardset-card__text {
+        font-size: 1.5rem;
         line-height: 1.5;
     }
 }
