--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -29,10 +29,15 @@
 .cardset-card {
     display: flex;
     flex-direction: row;
-    padding: 1rem;
+    padding: 0.5rem;
     border: 1px dotted #999;
     border-radius: 0.25rem;
     margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+    .cardset-card {
+        padding: 1rem;
+    }
 }
 
 
@@ -40,7 +45,7 @@
     display: block;
     width: 4rem;
     height: 4rem;
-    margin-right: 0.5rem;
+    margin: 0 0.5rem 0 0;
     padding: 0.5625rem;
     flex-grow: 0;
     flex-shrink: 0;
@@ -48,19 +53,20 @@
     border-radius: 50%;
     border: 1px solid #999;
     background-color: #eeeeee;
+    align-self: center !important;
 }
 @media (min-width: 768px) {
     .cardset-card__avatar {
         width: 5rem;
         height: 5rem;
-        margin-right: 1rem;
+        margin: 0 1rem 0 0;
     }
 }
 @media (min-width: 992px) {
     .cardset-card__avatar {
         width: 7rem;
         height: 7rem;
-        margin-right: 1rem;
+        margin: 0 1rem 0 0;
     }
 }
 
@@ -124,11 +130,51 @@ cardset-card__text {
     height: 2rem;
     flex-grow: 0;
     flex-shrink: 0;
+    border: 1px solid #ccc;
 }
 @media (min-width: 768px) {
 .cardset-card__status {
         width: 3rem;
         height: 3rem;
+    }
+}
+
+
+.cardset-card__status-count {
+    font-size: 1rem;
+    line-height: 2.5;
+    margin-left: auto;
+    align-self: center !important;
+    width: 2.68rem;
+    height: 2.68rem;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background-color: #efefef;
+}
+@media (min-width: 768px) {
+.cardset-card__status-count {
+        font-size: 1.5rem;
+        line-height: 2.5;
+        width: 4rem;
+        height: 4rem;
+    }
+}
+
+
+.cardset-card__prompt {
+    margin-left: 0.5rem;
+    align-self: center !important;
+    width: 1rem;
+    height: 3rem;
+    line-height: 1;
+    flex-grow: 0;
+    flex-shrink: 0;
+    font-size: 2rem;
+    font-weight: 600;
+}
+@media (min-width: 768px) {
+.cardset-card__prompt {
+        display: none;
     }
 }
 
