--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -53,7 +53,7 @@
     border-radius: 50%;
     border: 1px solid #999;
     background-color: #eeeeee;
-    align-self: center !important;
+    align-self: center;
 }
 @media (min-width: 768px) {
     .cardset-card__avatar {
@@ -97,7 +97,7 @@
 
 .cardset-card__title {
     font-size: 1.25rem;
-    /*align-self: center !important;*/
+    align-self: center;
     margin-right: 1rem;
     line-height: 1.3;
 }
@@ -108,16 +108,39 @@
     }
 }
 
-.
-cardset-card__text {
-    font-size: 1rem;
-    /* align-self: center !important;*/
+.level-name {
+    font-size: 1.25rem;
+    align-self: start;
+}
+@media (min-width: 768px) {
+    .level-name {
+        font-size: 2rem;
+        line-height: 1.5;
+        align-self: start;
+    }
+}
+
+.cardset-card__subhead {
+    font-size: 0.8125rem;
+    line-height: 1;
+    text-align: left;
+    text-transform: uppercase;
+}
+@media (min-width: 768px) {
+    .cardset-card__subhead {
+        font-size: 1rem;
+    }
+}
+
+
+.cardset-card__text {
+    font-size: 0.875rem;
     margin-right: 1rem;
     line-height: 1.3;
 }
 @media (min-width: 768px) {
     .cardset-card__text {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         line-height: 1.5;
     }
 }
@@ -125,7 +148,7 @@ cardset-card__text {
 
 .cardset-card__status {
     margin-left: auto;
-    align-self: center !important;
+    align-self: center;
     width: 2rem;
     height: 2rem;
     flex-grow: 0;
@@ -142,30 +165,28 @@ cardset-card__text {
 
 .cardset-card__status-count {
     font-size: 1rem;
-    line-height: 2.5;
+    line-height: 1.25;
     margin-left: auto;
-    align-self: center !important;
-    width: 2.68rem;
-    height: 2.68rem;
+    align-self: center;
+    /* width: 2.68rem;
+    height: 2.68rem;*/
     flex-grow: 0;
     flex-shrink: 0;
-    background-color: #efefef;
 }
 @media (min-width: 768px) {
 .cardset-card__status-count {
         font-size: 1.5rem;
-        line-height: 2.5;
+        /*line-height: 2.5;
         width: 4rem;
-        height: 4rem;
+        height: 4rem;*/
     }
 }
 
 
 .cardset-card__prompt {
+    margin-top: -0.5rem;
     margin-left: 0.5rem;
-    align-self: center !important;
-    width: 1rem;
-    height: 3rem;
+    align-self: center;
     line-height: 1;
     flex-grow: 0;
     flex-shrink: 0;
