--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -26,10 +26,14 @@
     }
 }
 
+.cardset a {
+    text-decoration: none;
+}
+
 .cardset-card {
     display: flex;
     flex-direction: row;
-    padding: 0.5rem;
+    padding: 1rem 0.5rem;
     border: 1px dotted #999;
     border-radius: 0.25rem;
     margin-bottom: 1.5rem;
