--- a/ll-bootstrap/base.css
+++ b/ll-bootstrap/base.css
@@ -3,3 +3,29 @@
     margin-bottom: 3rem !important;
 }
 
+.exercise-space {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
+@media (min-width: 768px) {
+.exercise-space {
+    padding: 0;
+    width: 43.5rem;
+    }
+}
+@media (min-width: 992px) {
+.exercise-space {
+    width: 48.74rem;
+    }
+}
+@media (min-width: 1200px) {
+.exercise-space {
+    width: 58.125rem;
+    }
+}
+@media (min-width: 1400px) {
+.exercise-space {
+    width: 67.5rem;
+    }
+}
