--- a/ll-bootstrap/base.css
+++ b/ll-bootstrap/base.css
@@ -1,11 +1,14 @@
 .content-body {
     margin-top: 3rem !important;
     margin-bottom: 3rem !important;
+    font-size: 1.125rem;
 }
 
 .exercise-space {
     margin-left: auto;
     margin-right: auto;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     width: 100%;
 }
 @media (min-width: 768px) {
