--- a/ll-bootstrap/question.css
+++ b/ll-bootstrap/question.css
@@ -1,3 +1,8 @@
+.question {
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
 .question-statement {
     background-color: #f3f3f3;
     padding: 0 0.125rem 0.25rem 0.125rem;
