--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -127,8 +127,14 @@
 
 
 .exercise-space-banner {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
+@media (min-width: 768px) {
+.exercise-space-banner {
     padding-top: 0.75rem;
-    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+    }
 }
 
 .exercise-space-banner a {
@@ -145,13 +151,11 @@
     font-size: 4rem;
     font-weight: 400;
 }
-@media (min-width: 768px) {
-.exercise-space-banner .main-banner__prompt {
-    }
-}
+
+
 .exercise-space-banner .main-banner__avatar {
-    width: 4rem;
-    height: 4rem;
+    width: 3rem;
+    height: 3rem;
     margin: 0 1rem 0 0;
     padding: 0.25rem;
     border: 1px solid #222;
@@ -160,6 +164,42 @@
     flex-grow: 0;
     flex-shrink: 0;
 }
+@media (min-width: 768px) {
+.exercise-space-banner .main-banner__avatar {
+    width: 4rem;
+    height: 4rem;
+    }
+}
+@media (min-width: 992px) {
+.exercise-space-banner .main-banner__avatar {
+    width: 4rem;
+    height: 4rem;
+    }
+}
+@media (min-width: 1200px) {
+.exercise-space-banner .main-banner__avatar {
+    width: 4rem;
+    height: 4rem;
+    }
+}
+@media (min-width: 1400px) {
+.exercise-space-banner .main-banner__avatar {
+    width: 4rem;
+    height: 4rem;
+    }
+}
+
+.exercise-space-banner h1 {
+}
+@media (min-width: 768px) {
+.exercise-space-banner h1 {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: auto;
+    width: auto;
+    }
+}
+
 .exercise-space-banner .main-banner__subhead {
     display: inline-block;
     font-size: 1.5rem;
