--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -154,8 +154,8 @@
 
 
 .exercise-space-banner .main-banner__avatar {
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
     margin: 0 1rem 0 0;
     padding: 0.25rem;
     border: 1px solid #222;
@@ -201,11 +201,24 @@
 }
 
 .exercise-space-banner .main-banner__subhead {
-    display: inline-block;
+    display: block;
     font-size: 1.5rem;
     margin-right: 0.5rem;
+    white-space: nowrap;
 }
+@media (min-width: 768px) {
+.exercise-space-banner .main-banner__subhead {
+    display: inline-block;
+    }
+}
+
+
+.exercise-space-banner .main-banner__title {
+    display: block;
+    font-size: 1.5rem;
+}
+@media (min-width: 768px) {
 .exercise-space-banner .main-banner__title {
     display: inline-block;
-    font-size: 1.5rem;
+    }
 }
