--- a/ll-bootstrap/button.css
+++ b/ll-bootstrap/button.css
@@ -52,3 +52,10 @@
     font-size: 1.25rem;
     border-radius: 0.3rem;
 }
+
+@media (max-width: 767px) {
+    .btn-shrink {
+        padding: 0.375rem 0.75rem;
+    }
+}
+
