--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -143,7 +143,7 @@
 
 .exercise-space-banner .main-banner__prompt {
     margin-top: -0.75rem;
-    margin-right: 0.75rem;
+    margin-right: 0.5rem;
     align-self: center;
     line-height: 1;
     flex-grow: 0;
@@ -151,11 +151,16 @@
     font-size: 4rem;
     font-weight: 400;
 }
+@media (min-width: 768px) {
+.exercise-space-banner .main-banner__prompt {
+    margin-right: 0.75rem;
+    }
+}
 
 
 .exercise-space-banner .main-banner__avatar {
-    width: 2.5rem;
-    height: 2.5rem;
+    width: 3rem;
+    height: 3rem;
     margin: 0 1rem 0 0;
     padding: 0.25rem;
     border: 1px solid #222;
@@ -202,23 +207,25 @@
 
 .exercise-space-banner .main-banner__subhead {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-right: 0.5rem;
     white-space: nowrap;
 }
 @media (min-width: 768px) {
 .exercise-space-banner .main-banner__subhead {
     display: inline-block;
+    font-size: 1.5rem;
     }
 }
 
 
 .exercise-space-banner .main-banner__title {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.275rem;
 }
 @media (min-width: 768px) {
 .exercise-space-banner .main-banner__title {
     display: inline-block;
+    font-size: 1.5rem;
     }
 }
