--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -127,14 +127,8 @@
 
 
 .exercise-space-banner {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
-@media (min-width: 768px) {
-.exercise-space-banner {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-    }
 }
 
 .exercise-space-banner a {
@@ -159,8 +153,8 @@
 
 
 .exercise-space-banner .main-banner__avatar {
-    width: 3rem;
-    height: 3rem;
+    width: 2.875rem;
+    height: 2.875rem;
     margin: 0 1rem 0 0;
     padding: 0.25rem;
     border: 1px solid #222;
@@ -195,9 +189,11 @@
 }
 
 .exercise-space-banner h1 {
+    margin-top: 0.5rem;
 }
 @media (min-width: 768px) {
 .exercise-space-banner h1 {
+    margin-top: 0;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: auto;
