--- a/ll-bootstrap/base.css
+++ b/ll-bootstrap/base.css
@@ -1,3 +1,12 @@
+body {
+    position: relative;
+    min-height: 100vh;
+}
+
+main {
+    min-height: calc(100vh - 12rem);
+}
+
 .content-body {
     margin-top: 3rem !important;
     margin-bottom: 3rem !important;
