--- a/ll-bootstrap/helper.css
+++ b/ll-bootstrap/helper.css
@@ -1,3 +1,43 @@
+.tutorial-section {
+    position: relative;
+}
+
+.guide__box {
+	position: relative;
+	/*right: 1rem;
+	top: -2rem;*/
+	background: rgba(251, 219, 200, 1);
+    border: 1px solid rgba(239, 112, 37, 1);
+    border-radius: 0.25rem;
+    padding: 1rem;
+    font-size: 1rem;
+    /*width: 20rem;*/
+    z-index: 100;
+}
+
+.guide__box:after, .guide__box:before {
+    position: absolute;
+    bottom: 100%;
+    border: solid transparent;
+    content: "";
+    height: 0;
+    width: 0;
+    pointer-events: none;
+}
+
+.guide__box:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-bottom-color: rgba(251, 219, 200, 1);
+	border-width: 10px;
+	margin-left: -10px;
+}
+.guide__box:before {
+	border-color: rgba(194, 225, 245, 0);
+	border-bottom-color: rgba(239, 112, 37, 1);
+	border-width: 11px;
+	margin-left: -11px;
+}
+
 .tutorial-modal #helper-modal {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
     border: 0.125rem solid rgba(239, 112, 37, 1);
@@ -9,12 +49,33 @@
     background-color: rgba(239, 112, 37, 0.25);
 }
 
+.tutorial-modal #guide-modal {
+	position: absolute;
+	right: 1rem;
+	top: -2rem;    
+    width: 20rem;
+}
+.tutorial-modal #guide-modal.guide__box:after,
+.tutorial-modal #guide-modal.guide__box:before {
+    left: 80%;
+}
+
 
 .tutorial-question #helper-question {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
     border: 0.125rem solid rgba(239, 112, 37, 1);
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
+}
+.tutorial-question #guide-question {
+	position: absolute;
+	left: 1rem;
+    margin-top: -1rem;
+    width: 20rem !important;
+}
+.tutorial-question #guide-question.guide__box:after,
+.tutorial-question #guide-question.guide__box:before {
+    left: 50%;
 }
 
 .tutorial-solution #helper-solution {
@@ -23,6 +84,17 @@
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
 }
+.tutorial-solution #guide-solution {
+	position: absolute;
+	left: 1rem;
+    margin-top: 1rem;
+    width: 20rem !important;
+}
+.tutorial-solution #guide-solution.guide__box:after,
+.tutorial-solution #guide-solution.guide__box:before {
+    left: 50%;
+}
+
 
 .tutorial-submission #helper-submission {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
@@ -30,6 +102,17 @@
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
 }
+.tutorial-submission #guide-submission {
+	position: absolute;
+	right: 1rem;
+    margin-top: 1rem;
+    width: 20rem !important;
+}
+.tutorial-submission #guide-submission.guide__box:after,
+.tutorial-submission #guide-submission.guide__box:before {
+    left: 50%;
+}
+
 
 .tutorial-hint #helper-hint {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
@@ -37,6 +120,17 @@
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
 }
+.tutorial-hint #guide-hint {
+	position: relative;
+	margin-left: 3rem;
+    margin-top: 0;
+    width: 20rem !important;
+}
+.tutorial-hint #guide-hint.guide__box:after,
+.tutorial-hint #guide-hint.guide__box:before {
+    left: 80%;
+}
+
 
 .tutorial-solutionkey #helper-solutionkey {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
@@ -44,6 +138,19 @@
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
 }
+.tutorial-solutionkey #guide-solutionkey {
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+    margin-top: 0;
+    width: 20rem !important;
+}
+.tutorial-solutionkey #guide-solutionkey.guide__box:after,
+.tutorial-solutionkey #guide-solutionkey.guide__box:before {
+    left: 50%;
+}
+
+
 
 .tutorial-reset #helper-reset {
     box-shadow: 0 0 5px rgba(239, 112, 37, 1);
@@ -51,11 +158,44 @@
     border-radius: 0.25rem;
     background-color: rgba(239, 112, 37, 0.25);
 }
+.tutorial-reset #guide-reset {
+	position: relative;
+	margin-left: auto;
+	margin-right: 3rem;
+    margin-top: 0;
+    width: 20rem !important;
+}
+.tutorial-reset #guide-reset.guide__box:after,
+.tutorial-reset #guide-reset.guide__box:before {
+    left: 20%;
+}
+
+
 
 .guide-text {
-    margin-top: 1rem;
-    padding: 1rem;
     display: none;
-    font-size: 1.5rem;
-    border: 1px solid #ccc;
+}
+
+
+.tutorial-close {
+    height: 2rem;
+    width: 2rem;
+    background-color: rgba(239, 112, 37, 1);
+    border-radius: 50%;
+    position: relative;
+    margin: -0.5rem -0.5rem 0 auto;
+    display: block;
+}
+
+.tutorial-close:after {
+    position: absolute;
+    top: -2px;
+    bottom: 0;
+    left: 1px;
+    right: 0;
+    content: "\00D7"; /* use the hex value here... */
+    font-size: 2rem; 
+    color: #fff;
+    line-height: 1;
+    text-align: center;
 }
