--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -1,3 +1,5 @@
+/* Implemented */
+
 .cardset {
     list-style: none;
     padding: 0;
@@ -79,7 +81,7 @@
     width: 4rem;
     height: 4rem;
     margin: 0 0.75rem 0 0;
-    padding: 0.5625rem;
+    padding: 0.5rem;
     flex-grow: 0;
     flex-shrink: 0;
     overflow: hidden;
