--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -1,3 +1,5 @@
+/* Implemented */
+
 .main-banner {
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -19,7 +21,7 @@
     height: 5rem;
     margin: 0 1rem 0 0;
     padding: 0.75rem;
-    border: 1px solid #222;
+    border: 1px solid #999;
     border-radius: 50%;
     background-color: #adb5bd; /* $gray-500 */
     flex-grow: 0;
@@ -37,6 +39,8 @@
     text-align: center;
     line-height: 190%;
     background-color: #dee2e6;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 
@@ -60,7 +64,7 @@
     height: 6rem;
     margin: 0 1rem 0 0;
     padding: 0.75rem;
-    border: 1px solid #222;
+    border: 1px solid #999;
     border-radius: 50%;
     background-color: #adb5bd; /* $gray-500 */
     flex-grow: 0;
@@ -82,8 +86,6 @@
     .banner-hero__avatar {
         width: 7rem;
         height: 7rem;
-        margin: 0 1rem 0 0;
-        padding: 0.75rem;
     }
 }
 @media (min-width: 992px) {
@@ -102,8 +104,6 @@
     .banner-hero__avatar {
         width: 8rem;
         height: 8rem;
-        margin: 0 1rem 0 0;
-        padding: 0.75rem;
     }
 }
 @media (min-width: 1200px) {
@@ -157,7 +157,7 @@
     height: 2.875rem;
     margin: 0 0.75rem 0 0;
     padding: 0.25rem;
-    border: 1px solid #222;
+    border: 1px solid #999;
     border-radius: 50%;
     background-color: #adb5bd; /* $gray-500 */
     flex-grow: 0;
