--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -65,9 +65,10 @@
     display: flex;
     flex-direction: row;
     padding: 0.75rem;
-    border: 1px dotted #999;
+    border: 1px solid rgba(255,224,178,1);
     border-radius: 0.25rem;
     margin-bottom: 1.5rem;
+    background-color: rgba(255,224,178,0.2);
 }
 @media (min-width: 768px) {
     .cardset-card {
@@ -81,13 +82,12 @@
     width: 4rem;
     height: 4rem;
     margin: 0 0.75rem 0 0;
-    padding: 0.275rem;
+    padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
     overflow: hidden;
     border-radius: 50%;
-    border: 1px solid #999;
-    background-color: #eeeeee;
+    background-color: #E8F5E9;
     align-self: center;
     overflow: visible;
 }
@@ -100,8 +100,8 @@
 }
 @media (min-width: 992px) {
     .cardset-card__avatar {
-        width: 7rem;
-        height: 7rem;
+        width: 8rem;
+        height: 8rem;
         margin: 0 1rem 0 0;
     }
 }
