--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -87,6 +87,7 @@
     flex-shrink: 0;
     overflow: hidden;
     border-radius: 50%;
+    border: 1px solid #A5D6A7;
     background-color: #E8F5E9;
     align-self: center;
     overflow: visible;
