--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -81,7 +81,7 @@
     display: block;
     width: 4rem;
     height: 4rem;
-    margin: 0 0.75rem 0 0;
+    margin: 0 1.25rem 0 0;
     padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
@@ -96,17 +96,21 @@
     .cardset-card__avatar {
         width: 5rem;
         height: 5rem;
-        margin: 0 1rem 0 0;
+        margin: 0 1.525rem 0 0;
     }
 }
 @media (min-width: 992px) {
     .cardset-card__avatar {
-        width: 8rem;
-        height: 8rem;
-        margin: 0 1rem 0 0;
+        width: 7rem;
+        height: 7rem;
+        margin: 0 1.75rem 0 0;
     }
 }
 
+
+.cardset-card__avatar img {
+    width: 110%;
+}
 
 .cardset-card__number {
     display: block;
@@ -150,6 +154,13 @@
     align-self: start;
 }
 @media (min-width: 768px) {
+    .level-name {
+        font-size: 2.125rem;
+        line-height: 1.25;
+        align-self: start;
+    }
+}
+@media (min-width: 992px) {
     .level-name {
         font-size: 2.5rem;
         line-height: 1.25;
