--- a/ll-bootstrap/card.css
+++ b/ll-bootstrap/card.css
@@ -32,6 +32,20 @@
     text-decoration: none;
 }
 
+#cardset-label {
+    font-size: 1.875rem;
+}
+@media (min-width: 768px) {
+#cardset-label {
+    font-size: 2rem;
+    }
+}
+@media (min-width: 992px) {
+#cardset-label {
+    font-size: 2.75rem;
+    }
+}
+
 
 .cardset-listnum {
     counter-reset: listNum-counter;
@@ -85,12 +99,11 @@
     padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
-    overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid #A5D6A7;
-    background-color: #E8F5E9;
-    align-self: center;
     overflow: visible;
+    border-radius: 50%;
+    border: 1px solid #a5d6a7;
+    background-color: #e8f5e9;
+    align-self: center;
 }
 @media (min-width: 768px) {
     .cardset-card__avatar {
