--- a/ll-bootstrap/footer.css
+++ b/ll-bootstrap/footer.css
@@ -9,14 +9,11 @@ footer {
 }
 
 .footer__logo {
-    display: block;
-    width: 15rem;
-    margin: 2rem auto;
+    max-width: 18rem;
 }
 @media (min-width: 768px) {
 .footer__logo {
-    width: 25rem;
-    margin: 3rem auto;
+    max-width: 22rem;
     }
 }
 
@@ -26,22 +23,33 @@ footer {
     font-size: 1.25rem;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 @media (min-width: 768px) {
 .navlist--footer {
     font-size: 1.5rem;
     flex-direction: row;
+    text-align: left;
     }
 }
 
 .navlist--footer a {
     color: #000;
     text-decoration: none;
-    display: block;
+    display: inline-block;
     padding: 0.5rem 1rem;
+    margin: 0 1rem;
 }
 .navlist--footer a:hover {
     color: $black;
     text-decoration: underline;
     background-color: #eff6ff;
 }
+
+.ll-license {
+    max-width: 30rem;
+    padding: 0 1rem;
+    margin: 1rem auto 2rem auto;
+    text-align: center;
+}
+
