--- a/ll-bootstrap/banner.css
+++ b/ll-bootstrap/banner.css
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     background-size: 150%;
     background-position: bottom -5rem left 0;
+    color: #fff;
 }
 @media (min-width: 768px) {
 .main-banner {
@@ -17,25 +18,57 @@
 }
 .main-banner__title {
     display: block;
+    text-shadow: 0 2px 4px rgba(0,0,0,.2), 0 4px 5px rgba(0,0,0,.14), 0 1px 10px rgba(0,0,0,.12);
+        margin: 0.25rem 0;
+        font-weight: 600;
 }
 .main-banner__subhead {
     display: block;
     font-size: 1rem;
+    text-shadow: 0 2px 4px rgba(0,0,0,.2), 0 4px 5px rgba(0,0,0,.14), 0 1px 10px rgba(0,0,0,.12);
 }
 .main-banner__text {
     display: block;
     font-size: 1rem;
+    text-shadow: 0 2px 4px rgba(0,0,0,.2), 0 4px 5px rgba(0,0,0,.14), 0 1px 10px rgba(0,0,0,.12);
+}
+@media (min-width: 768px) {
+    .main-banner__text {
+    font-size: 1.25rem;
+    }
 }
 .main-banner__avatar {
+    display: block;
     width: 5rem;
     height: 5rem;
-    margin: 0 1rem 0 0;
-    padding: 0.75rem;
-    border: 1px solid #999;
-    border-radius: 50%;
-    background-color: #adb5bd; /* $gray-500 */
+    margin: 0 1.25rem 0 0;
+    padding: 0;
     flex-grow: 0;
     flex-shrink: 0;
+    overflow: visible;
+    border-radius: 50%;
+    border: 1px solid #a5d6a7;
+    background-color: #e8f5e9;
+    align-self: center;
+    -webkit-box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
+    box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
+}
+@media (min-width: 768px) {
+    .main-banner__avatar {
+        width: 6rem;
+        height: 6rem;
+        margin: 0 1.525rem 0 0;
+    }
+}
+@media (min-width: 992px) {
+    .main-banner__avatar {
+        width: 7rem;
+        height: 7rem;
+        margin: 0 1.75rem 0 0;
+    }
+}
+.main-banner__avatar img {
+    width: 110%;
 }
 
 .q-completion {
@@ -48,9 +81,10 @@
     vertical-align: middle;
     text-align: center;
     line-height: 190%;
-    background-color: #dee2e6;
+    background-color: #e8f5e9;
     flex-grow: 0;
     flex-shrink: 0;
+    color: #000;
 }
 
 
@@ -69,20 +103,39 @@
     text-shadow: 0 2px 5px rgba(0,0,0,.14), 0 1px 5px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.12);
 }
 .banner-hero__text {
-    font-size: 1rem;
+    font-size: 1.125rem;
     font-weight: 600;
     text-shadow: 0 2px 5px rgba(0,0,0,.14), 0 1px 5px rgba(0,0,0,.12), 0 2px 4px rgba(0,0,0,.12);
 }
 .banner-hero__avatar {
-    width: 6rem;
-    height: 6rem;
-    margin: 0 1rem 0 0;
-    padding: 0.75rem;
-    border: 1px solid #999;
+    width: 4.5rem;
+    height: 4.5rem;
+    margin: 0 1.5rem 0 1rem;
+    padding: 0;
     border-radius: 50%;
-    background-color: #adb5bd; /* $gray-500 */
+    border: 1px solid #a5d6a7;
+    background-color: #fff;
     flex-grow: 0;
     flex-shrink: 0;
+    -webkit-box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
+    box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
+}
+.banner-hero__avatar img {
+        margin-top: -1rem;
+        margin-left: -0.5rem;
+    width: 130%;
+}
+@media (min-width: 576px) {
+     .banner-hero__avatar {
+    width: 6rem;
+    height: 6rem;
+        margin: 0 2rem 0 0;
+    }
+   .banner-hero__avatar img {
+        margin-top: -1.25rem;
+        margin-left: -0.75rem;
+        width: 130%;
+    }
 }
 @media (min-width: 768px) {
     .banner-hero {
@@ -98,8 +151,13 @@
         font-size: 1.4rem;
     }
     .banner-hero__avatar {
-        width: 7rem;
-        height: 7rem;
+        width: 8rem;
+        height: 8rem;
+        margin: 0 2rem 0 0;
+    }
+    .banner-hero__avatar img {
+        margin-top: -1.75rem;
+        margin-left: -1.125rem;
     }
 }
 @media (min-width: 992px) {
@@ -119,6 +177,10 @@
         width: 8rem;
         height: 8rem;
     }
+    .banner-hero__avatar img {
+        margin-top: -1.75rem;
+        margin-left: -1rem;
+    }
 }
 @media (min-width: 1200px) {
     .banner-hero {
@@ -137,6 +199,10 @@
         width: 10rem;
         height: 10rem;
     }
+    .banner-hero__avatar img {
+        margin-top: -2.25rem;
+        margin-left: -1.25rem;
+    }
 }
 
 
@@ -147,6 +213,7 @@
 
 .exercise-space-banner a {
     text-decoration: none;
+    color: #fff;
 }
 
 .exercise-space-banner .main-banner__prompt {
@@ -167,15 +234,20 @@
 
 
 .exercise-space-banner .main-banner__avatar {
+    display: block;
     width: 2.875rem;
     height: 2.875rem;
+    overflow: visible;
     margin: 0 0.75rem 0 0;
-    padding: 0.25rem;
-    border: 1px solid #999;
+    padding: 0;
+    border: 1px solid #a5d6a7;
     border-radius: 50%;
-    background-color: #adb5bd; /* $gray-500 */
+    background-color: #e8f5e9;
     flex-grow: 0;
     flex-shrink: 0;
+    align-self: center;
+    -webkit-box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
+    box-shadow: 0 3px 5px -1px rgba(0,0,0,.3), 0 5px 8px 0 rgba(0,0,0,.2), 0 1px 14px 0 rgba(0,0,0,.2);
 }
 @media (min-width: 768px) {
 .exercise-space-banner .main-banner__avatar {
@@ -217,10 +289,11 @@
 }
 
 .exercise-space-banner .main-banner__subhead {
-    display: block;
+    display: none;
     font-size: 1rem;
     margin-right: 0.5rem;
     white-space: nowrap;
+    font-weight: 600;
 }
 @media (min-width: 768px) {
 .exercise-space-banner .main-banner__subhead {
@@ -233,6 +306,7 @@
 .exercise-space-banner .main-banner__title {
     display: block;
     font-size: 1.275rem;
+    font-weight: 600;
 }
 @media (min-width: 768px) {
 .exercise-space-banner .main-banner__title {
